SalesforceTraining/force-app/main/default/objects/Candidate_AtharvaBhatkhalkar__c/Candidate_AtharvaBhatkhalkar__c.object-meta.xml
<CustomObject>
    <description>Fields -
Following are the fields need to be created on object Candidate. A trainee will create the following fields with the mentioned Label name and appropriate data type. Also, refer to the Required field column for each field.</description>
    <label>Candidate_AtharvaBhatkhalkar</label>
    <nameField>
        <label>Candidate_AtharvaBhatkhalkar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidate_AtharvaBhatkhalkar</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>