SalesforceTraining/force-app/main/default/objects/Candidate_AtharvaBhatkhalkar__c/fields/Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Date__c</fullName>
    <description>It should accept date.</description>
    <inlineHelpText>kindly input the date</inlineHelpText>
    <label>Application Date</label>
    <type>Date</type>
</CustomField>