SalesforceTraining/force-app/main/default/objects/Candidate_AtharvaBhatkhalkar__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <description>Should accept the</description>
    <inlineHelpText>kindly give the date of birth</inlineHelpText>
    <label>DOB</label>
    <type>Date</type>
</CustomField>