SalesforceTraining/force-app/main/default/objects/Candidate_AtharvaBhatkhalkar__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>One should enter only valid email address</description>
    <inlineHelpText>kindly give your valid Email.</inlineHelpText>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>