SalesforceTraining/force-app/main/default/objects/Candidate_AtharvaBhatkhalkar__c/fields/Expected_Salary__c.field-meta.xml
<CustomField>
    <fullName>Expected_Salary__c</fullName>
    <description>It should accept numerical value in dollar format</description>
    <label>Expected Salary</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>