SalesforceTraining/force-app/main/default/objects/Candidate_AtharvaBhatkhalkar__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Text field
Should only accept 15 characters.</description>
    <inlineHelpText>Kindly enter your first name here.</inlineHelpText>
    <label>First Name</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>