SalesforceTraining/force-app/main/default/objects/Candidate_AtharvaBhatkhalkar__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <description>Field should automatically calculate full name.
Should display Salutation First Name Last Name automatically
E.g: If
Salutation = ‘Mr.’
  	`First Name = ‘Tom’
Last Name = ‘Cruise’
Then 
Name should be 
‘Mr. Tom ‘Cruise’</description>
    <formula>TEXT(Salutation__c)  +  First_Name__c  +  Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>kindly check the name.</inlineHelpText>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>