SalesforceTraining/force-app/main/default/objects/Candidate_AtharvaBhatkhalkar__c/fields/JOB__c.field-meta.xml
<CustomField>
    <fullName>JOB__c</fullName>
    <description>It should be able to relate a candidate to a job</description>
    <label>Job_AtharvaBhatkhalkar</label>
    <referenceTo>Job_AtharvaBhatkhalkar__c</referenceTo>
    <relationshipLabel>Candidate_AtharvaBhatkhalkar</relationshipLabel>
    <relationshipName>Candidate_AtharvaBhatkhalkar</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>