SalesforceTraining/force-app/main/default/objects/Candidate_AtharvaBhatkhalkar__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>This field is the name of the job.
User should not enter name but system should create it automatically.
The name should follow this format “JOB-{count}”. Count should be increased automatically for each new job posted(created). For. ex. JOB-001, JOB-002.</description>
    <displayFormat>JOB-{0}</displayFormat>
    <label>Name</label>
    <type>AutoNumber</type>
</CustomField>