SalesforceTraining/force-app/main/default/objects/Candidate_AtharvaBhatkhalkar__c/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <description>It should have fixed values: ‘Mr.’, ‘Ms.’
A user should be able to select any one of the value.</description>
    <inlineHelpText>kindly select any one salutation from list</inlineHelpText>
    <label>Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mr.</fullName>
            </value>
            <value>
                <fullName>Ms.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>